--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.1.0",
-    "modernizr": "~2.6.2",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "angular": "1.6.1"
   },
   "devDependencies": {}
 }
