--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.1.0",
     "jquery": "~1.11.0",
-    "angular": "1.6.1"
+    "angular": "1.6.1",
+    "normalize-css": "normalize.css#^5.0.0"
   },
   "devDependencies": {}
 }
