--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "bootstrap-sass-official": "~3.1.0",
     "jquery": "~1.11.0",
     "angular": "1.6.1",
-    "normalize-css": "normalize.css#^5.0.0"
+    "normalize-css": "normalize.css#^5.0.0",
+    "angular-route": "^1.6.1"
   },
   "devDependencies": {}
 }
