--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2"
   },
   "engines": {
     "node": ">=0.8.0"
