--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular": "1.6.1",
     "normalize-css": "normalize.css#^5.0.0",
     "angular-route": "^1.6.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-clipboard": "^1.5.0"
   },
   "devDependencies": {}
 }
